# BornAgain

./: .appveyor.yml  .clang-format  .clang-tidy  .cproject  .gitignore  .gitmodules  .project  .style.yapf  .travis.yml  AUTHORS  BornAgain.pro  CHANGELOG  CITATION  CMakeLists.txt  GISASFW.pro  INSTALL  Makefile  README  README.md  VERSION.cmake  ba_find_prism  bornagain.cfg  env_jcns.sh  gisasfw.cfg  ing  remake  shared.pri  trans3d.txt
App/: .lssrc  App  App.pro  AppOptionsDescription.cpp  AppOptionsDescription.h  CMakeLists.txt  DrawHelper.cpp  FitSuiteObserverFactory.h  IsGISAXSData.h  IsGISAXSTools.cpp  IsGISAXSTools.h  Makefile  SampleFactory.cpp  StandardSamples.cpp  StandardSamples.h  TestConvolution.cpp  TestDiffuseReflection.cpp  TestDiffuseReflection.h  TestFittingModule1.h  TestFittingModule2.h  TestFittingModule3.cpp  TestFittingModule3.h  TestFittingModule4.h  TestFormFactor.cpp  TestFormFactors.cpp  TestFourier.h  TestFumiliLMA.h  TestFunctionalTests.cpp  TestIsGISAXS12.cpp  TestIsGISAXS12.h  TestIsGISAXS5.cpp  TestMiscellaneous.h  TestMultiLayerRoughness.h  TestPerformance.cpp  TestPolarizedDWBATerms.cpp  TestPolarizedMeso.cpp  TestPolarizedMeso.h  TestPyGenerator.cpp  TestRipple1.cpp  TestRootTree.h  (+8 more)
App/inc/: App.h  AppLinkDef.h  AppOptionsDescription.h  ApplicationTestFactory.h  CommandLine.h  DrawHelper.h  EventFrame.h  FitSuiteDrawObserver.h  FitSuiteHelper.h  FitSuiteObserverFactory.h  FitSuiteWriteTreeObserver.h  FittingHelper.h  FunctionalTestFactory.h  IApplicationTest.h  IFunctionalTest.h  IsGISAXSData.h  IsGISAXSTools.h  LabelSample.h  PyGenVisitor.h  ROOTGSLNLSMinimizer.h  ROOTMinimizer.h  ROOTMinimizerFunction.h  ROOTMinimizerHelper.h  ROOTMinimizerOptionsHelper.h  SampleFactory.h  StandardSamples.h  TestBessel.h  TestBugs.h  TestConvolution.h  TestDWBAFormFactor.h  TestDetectorResolution.h  TestDiffuseReflection.h  TestDiffuseScattering.h  TestEventStructure.h  TestFactory.h  TestFittingBenchmark.h  TestFittingModule.h  TestFittingModule1.h  TestFittingModule2.h  TestFittingModule3.h  (+52 more)
App/src/: AppDict.cpp  AppDict.h  AppOptionsDescription.cpp  ApplicationTestFactory.cpp  CommandLine.cpp  DrawHelper.cpp  EventFrame.cpp  FitSuiteDrawObserver.cpp  FitSuiteHelper.cpp  FitSuiteObserverFactory.cpp  FitSuiteWriteTreeObserver.cpp  FittingHelper.cpp  FunctionalTestFactory.cpp  IFunctionalTest.cpp  IsGISAXSData.cpp  IsGISAXSTools.cpp  LabelSample.cpp  MinimizerFactory.cpp  PyGenVisitor.cpp  ROOTGSLNLSMinimizer.cpp  ROOTGSLSimAnMinimizer.cpp  ROOTMinimizer.cpp  ROOTMinimizerFunction.cpp  ROOTMinimizerHelper.cpp  ROOTMinimizerOptionsHelper.cpp  SampleFactory.cpp  StandardSamples.cpp  StandardSamples.cpp.autosave  TestBessel.cpp  TestBugs.cpp  TestConvolution.cpp  TestDWBAFormFactor.cpp  TestDetectorResolution.cpp  TestDiffuseReflection.cpp  TestDiffuseScattering.cpp  TestEventStructure.cpp  TestFactory.cpp  TestFittingBenchmark.cpp  TestFittingModule.cpp  TestFittingModule1.cpp  (+54 more)
Base/: CMakeLists.txt
Base/Axis/: Bin.cpp  Bin.h  ConstKBinAxis.cpp  ConstKBinAxis.h  CustomBinAxis.cpp  CustomBinAxis.h  FixedBinAxis.cpp  FixedBinAxis.h  IAxis.cpp  IAxis.h  PointwiseAxis.cpp  PointwiseAxis.h  VariableBinAxis.cpp  VariableBinAxis.h
Base/Const/: MathConstants.h  PhysicalConstants.h  Units.h
Base/Math/: Bessel.cpp  Bessel.h  Constants.h  FourierTransform.cpp  FourierTransform.h  Functions.cpp  Functions.h  Integrator.cpp  Integrator.h  IntegratorGK.cpp  IntegratorGK.h  IntegratorMCMiser.h  Numeric.cpp  Numeric.h  Precomputed.h
Base/Pixel/: IPixel.h  PolarizationHandler.cpp  PolarizationHandler.h  SimulationElement.cpp  SimulationElement.h
Base/Progress/: DelayedProgressCounter.cpp  DelayedProgressCounter.h  ProgressHandler.cpp  ProgressHandler.h
Base/Py/: PyCore.h  PyEmbeddedUtils.cpp  PyEmbeddedUtils.h  PyObject.h  PyUtils.cpp  PyUtils.h  PythonCore.h
Base/Types/: CloneableVector.h  Complex.h  Exceptions.cpp  Exceptions.h  ICloneable.h  SafePointerVector.h
Base/Utils/: Algorithms.h  Assert.h  Bessel.cpp  Bessel.h  FileSystemUtils.cpp  FileSystemUtils.h  IFactory.h  Integrator.cpp  Integrator.h  IntegratorMCMiser.h  MathFunctions.cpp  MathFunctions.h  Numeric.cpp  Numeric.h  Precomputed.h  PyEmbeddedUtils.cpp  PyEmbeddedUtils.h  PyFmt.cpp  PyFmt.h  PyObject.h  PythonCore.h  StringUtils.cpp  StringUtils.h  SysUtils.cpp  SysUtils.h  ThreadInfo.h
Base/Vector/: BasicVector3D.cpp  BasicVector3D.h  Direction.cpp  Direction.h  EigenCore.h  Transform3D.cpp  Transform3D.h  Vectors3D.h  WavevectorInfo.cpp  WavevectorInfo.h
Core/: .lssrc  CMakeLists.txt  Core.pro  Makefile  Makefile.am  mainpage.dox  python_module.pri
Core/Aggregate/: DecouplingApproximationStrategy.cpp  DecouplingApproximationStrategy.h  FTDecay1D.cpp  FTDecay1D.h  FTDecay2D.cpp  FTDecay2D.h  FTDecayFunctions.cpp  FTDecayFunctions.h  FTDistributions.cpp  FTDistributions.h  FTDistributions1D.cpp  FTDistributions1D.h  FTDistributions2D.cpp  FTDistributions2D.h  FormFactorCoherentPart.cpp  FormFactorCoherentPart.h  FormFactorCoherentSum.cpp  FormFactorCoherentSum.h  FormFactorInfo.cpp  FormFactorInfo.h  FormFactorWrapper.cpp  FormFactorWrapper.h  IDistribution1DSampler.cpp  IDistribution1DSampler.h  IDistribution2DSampler.cpp  IDistribution2DSampler.h  IInterferenceFunction.cpp  IInterferenceFunction.h  IInterferenceFunctionStrategy.cpp  IInterferenceFunctionStrategy.h  ILayout.cpp  ILayout.h  IPeakShape.cpp  IPeakShape.h  ISpecularInfoMap.h  InterferenceFunction1DLattice.cpp  InterferenceFunction1DLattice.h  InterferenceFunction2DLattice.cpp  InterferenceFunction2DLattice.h  InterferenceFunction2DParaCrystal.cpp  (+27 more)
Core/Aggregates/: DecouplingApproximationStrategy.cpp  DecouplingApproximationStrategy.h  FTDecayFunctions.cpp  FTDistributions.cpp  IInterferenceFunction.cpp  IInterferenceFunction.h  ILayout.h  (+13 more)
Device/: CMakeLists.txt
Fit/: CMakeLists.txt  CMakeLists.txt.autosave  Fit.pro  Makefile  python_module.pri
GUI/: CMakeLists.txt  appgui.pro  test_sample_builder.py
Param/: CMakeLists.txt
Sample/: CMakeLists.txt
cmake/: CMakeLists.txt
man/: CMakeLists.txt  bornagain.pod
(+11204 files in other folders)
